- Built-in modifications to built-in weapon mounts no longer take up slots inside the weapon mount or contribute to its overall costs.
- When modifying a weapon mount, changing its Visibility no longer causes its old Visibility value to be kept and have its availability and slot modifiers applied. Fixes #4648.

Data Changes:
- Fixed missing multiplier for Haunted lifestyle quality.
- Fixed missing availability for the BMW Luxus.
- Muscle Augmentation and Muscle Toner now just disable Celerity instead of being forbidden from being bought if the character has Celerity. Fixes #4621.
- Changed Cyberspace Designs Dragonfly (R5) melee autosoft rating to 1.
- Compiling can now properly be chosen for Frostbite.

Changed/New Strings:
- String_GameplayOption
- String_Lossy_Automatic_Compression_Option
- String_Lossy_Manual_Compression_Option
- Message_Options_FileIsNotPDF
- MessageTitle_Options_FileIsNotPDF

Deleted Strings:
- String_Lossy_Compression_Option

Build 216
Application Changes:
- The Master Index no longer crashes if a PDF offset is set to a massively high number.
- Fixed a rare crash that might happen on certain systems running Windows 11.

Data Changes:
- Fixed a heinous bug that caused a bunch of sourcebooks to always be enabled no matter what.
- Fixed the page offsets for text search patterns in the PDF scanner 

Changed/New Strings:
- Error_Message_PDF_IndexOutOfBounds
- String_Scanning
- String_Scanning_Pattern
- String_Initializing_Pattern

Build 215
Application Changes:
- Added a Scan Folder for PDF Sourcebooks to Options, so that (to Chummer known) Sourcebooks are automatically found and indexed.
- Fixed a lot of buggy behavior related to opening characters with Chummer from outside the program (e.g. with Windows' "Open with..." function).
- Clicking on "Open PDF" on a Master Index entry with no associated pdf now opens the "Choose PDF" Dialog instead of doing nothing.
- Fixed a crash when Custom Date and/or Time Formats were set to an empty value.